# snaplet-fay

./: .gitignore  CHANGELOG.md  README.md  TODO  fay-mover.cabal  snaplet-fay.cabal
example/: .ghci  LICENSE  example.cabal
example/snaplets/fay/: devel.cfg
example/snaplets/fay/src/: BrokenFile.hs  Dom.hs  Index.hs  Index.js  JQuery.hs
example/snaplets/fay/src/Application/: SharedTypes.hs  SharedTypes.js
example/snaplets/heist/templates/: index.tpl  login-form.tpl  register-form.tpl
example/src/: Application.hs  Site.hs
example/static/: broken.html  index.js  screen.css
resources/: devel.cfg
src/: Test.hs
src/Fay/: Mover.hs
src/Fay/Mover/: Util.hs
src/Snap/Snaplet/: Fay.hs
src/Snap/Snaplet/Fay/: Internal.hs
test-files/: Imported.hs  Importing.hs
