name:                snaplet-fay
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Fay integration for Snap with automatic (re)compilation during development
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@edea.se
category:            Web
build-type:          Simple
cabal-version:       >=1.8

Flag test
  Description: Whether to build the test executable
  Default: False

library
  ghc-options: -Wall
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.Fay

  other-modules:
    Snap.Snaplet.Fay.Internal

  build-depends:
    base         == 4.5.*,
    bytestring   == 0.9.*,
    data-default == 0.5.*,
    directory    == 1.1.*,
    fay          == 0.5.*,
    filepath     == 1.3.*,
    mtl          == 2.1.*,
    snap         == 0.9.*,
    snap-core    == 0.9.*



Executable test
  if !flag(test)
    buildable: False
  ghc-options: -Wall
  hs-source-dirs: src
  main-is: Test.hs

  build-depends:
    base         == 4.5.*,
    bytestring   == 0.9.*,
    data-default == 0.5.*,
    directory    == 1.1.*,
    fay          == 0.5.*,
    filepath     == 1.3.*,
    mtl          == 2.1.*,
    snap         == 0.9.*,
    snap-core    == 0.9.*
