name:                snaplet-fay
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.3.1.0
synopsis:            Fay integration for Snap with request- and pre-compilation.
description:         Fay integration for Snap with request based compilation during development and precompilation in production.
                     For more information, please see <https://github.com/faylang/snaplet-fay>.
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@edea.se
homepage:            https://github.com/faylang/snaplet-fay
bug-reports:         https://github.com/faylang/snaplet-fay/issues
category:            Web, Snap
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:  LICENSE

data-files:
  resources/devel.cfg

source-repository head
  type: git
  location: https://github.com/faylang/snaplet-fay.git

library
  ghc-options: -Wall
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.Fay

  other-modules:
    Snap.Snaplet.Fay.Internal, Paths_snaplet_fay

  build-depends:
      base         == 4.*
    , aeson        >= 0.6
    , bytestring   >= 0.9
    , configurator >= 0.2
    , data-default >= 0.5
    , directory    >= 1.1
    , fay          >= 0.14.1
    , filepath     >= 1.3
    , mtl          >= 2.1
    , snap         >= 0.11.1
    , snap-core    >= 0.9.3.1
    , transformers >= 0.3
