Name:                example
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable example
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
      base >= 4 && < 5
    , aeson == 0.6.*
    , bytestring == 0.9.*
    , data-lens >= 2.0.1 && < 2.11
    , data-lens-template >= 2.1 && < 2.2
    , heist == 0.8.*
    , MonadCatchIO-transformers >= 0.2.1 && < 0.4
    , mtl == 2.*
    , snap == 0.9.*
    , snap-core == 0.9.*
    , snap-server == 0.9.*
    , snap-loader-static == 0.9.*
    , snaplet-fay == 0.1.0.0
    , text == 0.11.*
    , time >= 1.1 && < 1.5
    , xmlhtml >= 0.1

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.9.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w -Wall
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
