name:                example
version:             0.1
synopsis:            Project Synopsis Here
description:         Project Description Here
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@bergmark.nl
stability:           Experimental
category:            Web
build-type:          Simple
cabal-version:       >=1.2

flag development
  description: Whether to build the server in development (interpreted) mode
  default: False

executable example
  hs-source-dirs: src, snaplets/fay/src
  main-is: Main.hs
  other-modules:
    Application
    Application.SharedTypes
    Site
  build-depends:
      base >= 4
    , MonadCatchIO-transformers >= 0.2.1
    , aeson >= 0.6
    , bytestring >= 0.9
    , fay
    , fay-text >= 0.2
    , fay-jquery == 0.6.*
    , heist >= 0.8
    , lens >= 3.7
    , mtl >= 2
    , snap >= 0.9
    , snap-core >= 0.9
    , snap-loader-dynamic >= 0.9 && < 0.11
    , snap-loader-static >= 0.9
    , snap-server >= 0.9
    , snaplet-fay
    , text >= 0.11
    , time >= 1.1
    , xmlhtml >= 0.1

  if flag(development)
    build-depends:
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w -Wall
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
